@@ -34,6 +34,8 @@ Next release
   to underscores if they exist in the name.  See
   https://github.com/Pylons/deform/pull/14 .
 
+- Deformdemo application now has a Time field demonstration.
+
 0.9 (2011-03-01)
 ----------------
 
